# python-2024

./: 05.Regular_Expressions.ipynb  requirements.txt
examples/python_tools/: pyproject.toml  requirements_lock.txt
tasks/: Task_1.ipynb  Task_2.ipynb  Task_3.ipynb
