[build-system]
requires = [
    "setuptools >= 61.0", 
    "wheel >= 0.43.0",
    "build >= 1.2.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "projectname"
version = "0.0.1"
description = "A small example package"
authors = [
  { name="Example Author", email="author@example.com" },
]
readme = {file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi >= 0.105.0",
    "requests >= 2.0.0",
]

[project.urls]
"Homepage" = "https://apmath.spbu.ru"
"Bug Tracker" = "https://github.com/projectname"

[project.optional-dependencies]
dev = [
    "mypy >= 1.13.0",
    "ruff >= 0.8.3",
    "black >= 24.10.0",
    "isort >= 5.3.12",
    "pytest >= 8.3.4"
]

inference = [
    "tqdm >= 4.66.0"
]

[tool.setuptools]
py-modules = [
    "projectname",
    "tests"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
src_paths = ["projectname", "test"]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.black]
skip-string-normalization = true

[tool.ruff]
line-length = 120